# gen/pb/circles.pb.validate.go
@@ -1,0 +1,259 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: circles.proto
+
+package pb
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+)
+
+// Validate checks the field values on Circles with the rules defined in the
+// proto definition for this message. If any rules are violated, an error is returned.
+func (m *Circles) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	return nil
+}
+
+// CirclesValidationError is the validation error returned by Circles.Validate
+// if the designated constraints aren't met.
+type CirclesValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CirclesValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CirclesValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CirclesValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CirclesValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CirclesValidationError) ErrorName() string { return "CirclesValidationError" }
+
+// Error satisfies the builtin error interface
+func (e CirclesValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCircles.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CirclesValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CirclesValidationError{}
+
+// Validate checks the field values on Circles_ListRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *Circles_ListRequest) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for Availability
+
+	return nil
+}
+
+// Circles_ListRequestValidationError is the validation error returned by
+// Circles_ListRequest.Validate if the designated constraints aren't met.
+type Circles_ListRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e Circles_ListRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e Circles_ListRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e Circles_ListRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e Circles_ListRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e Circles_ListRequestValidationError) ErrorName() string {
+	return "Circles_ListRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e Circles_ListRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCircles_ListRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = Circles_ListRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = Circles_ListRequestValidationError{}
+
+// Validate checks the field values on Circles_ListResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *Circles_ListResponse) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	for idx, item := range m.GetIntersections() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return Circles_ListResponseValidationError{
+					field:  fmt.Sprintf("Intersections[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if v, ok := interface{}(m.GetListStats()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return Circles_ListResponseValidationError{
+				field:  "ListStats",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	return nil
+}
+
+// Circles_ListResponseValidationError is the validation error returned by
+// Circles_ListResponse.Validate if the designated constraints aren't met.
+type Circles_ListResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e Circles_ListResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e Circles_ListResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e Circles_ListResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e Circles_ListResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e Circles_ListResponseValidationError) ErrorName() string {
+	return "Circles_ListResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e Circles_ListResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCircles_ListResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = Circles_ListResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = Circles_ListResponseValidationError{}
