# gen/pb/common.pb.validate.go
@@ -997,3 +997,142 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = PollutionValidationError{}
+
+// Validate checks the field values on Circle with the rules defined in the
+// proto definition for this message. If any rules are violated, an error is returned.
+func (m *Circle) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for ObjectId
+
+	// no validation rules for NeighborObjectId
+
+	// no validation rules for Availability
+
+	return nil
+}
+
+// CircleValidationError is the validation error returned by Circle.Validate if
+// the designated constraints aren't met.
+type CircleValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CircleValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CircleValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CircleValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CircleValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CircleValidationError) ErrorName() string { return "CircleValidationError" }
+
+// Error satisfies the builtin error interface
+func (e CircleValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCircle.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CircleValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CircleValidationError{}
+
+// Validate checks the field values on CircleIntersections with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *CircleIntersections) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for ObjectId
+
+	return nil
+}
+
+// CircleIntersectionsValidationError is the validation error returned by
+// CircleIntersections.Validate if the designated constraints aren't met.
+type CircleIntersectionsValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CircleIntersectionsValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CircleIntersectionsValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CircleIntersectionsValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CircleIntersectionsValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CircleIntersectionsValidationError) ErrorName() string {
+	return "CircleIntersectionsValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e CircleIntersectionsValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCircleIntersections.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CircleIntersectionsValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CircleIntersectionsValidationError{}
