# gen/swagger/api.swagger.json
@@ -242,6 +242,76 @@
         ]
       }
     },
+    "/api/v1/ListCircles": {
+      "get": {
+        "summary": "Circles\nGetting the list of circles",
+        "operationId": "ApiService_ListCircles",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiCirclesListResponse"
+            }
+          },
+          "400": {
+            "description": "Returned when the request body does not match the API's specifications",
+            "schema": {
+              "$ref": "#/definitions/apiErrorResponse"
+            }
+          },
+          "401": {
+            "description": "Returned when the user tries to login to a resource with an incorrect login info",
+            "schema": {
+              "$ref": "#/definitions/apiErrorResponse"
+            }
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource",
+            "schema": {
+              "$ref": "#/definitions/apiErrorResponse"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist",
+            "schema": {
+              "$ref": "#/definitions/apiErrorResponse"
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "schema": {
+              "$ref": "#/definitions/apiErrorResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "availability",
+            "description": "filters.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "UNKNOWN",
+              "CITY",
+              "REGION",
+              "DISTRICT",
+              "STEP"
+            ],
+            "default": "UNKNOWN"
+          }
+        ],
+        "tags": [
+          "Circles"
+        ]
+      }
+    },
     "/api/v1/ListDepartmentalOrganizationsIds": {
       "get": {
         "summary": "Getting the list of departmental organizations ids",
@@ -991,6 +1061,36 @@
         "STEP"
       ],
       "default": "UNKNOWN"
+    },
+    "apiCircleIntersections": {
+      "type": "object",
+      "properties": {
+        "objectId": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "neighborsObjectIds": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      }
+    },
+    "apiCirclesListResponse": {
+      "type": "object",
+      "properties": {
+        "intersections": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apiCircleIntersections"
+          }
+        },
+        "listStats": {
+          "$ref": "#/definitions/apiListStats"
+        }
+      }
     },
     "apiDepartmentalOrganizationsIdsListResponse": {
       "type": "object",
